...
}

final class ProfileViewController: UIViewController, ProfileViewControllerProtocol {
    
    // MARK: - IBOutlets
    @IBOutlet private var avatarImageView: UIImageView!
    @IBOutlet private var logoutButton: UIButton!
    @IBOutlet private var nameLabel: UILabel!
    @IBOutlet private var loginNameLabel: UILabel!
    @IBOutlet private var descriptionLabel: UILabel!
    
    
    // MARK: - Private Properties
...
            logoutButton.trailingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.trailingAnchor, constant: -20)
        ])
    }
    
    private func showLogoutAlert() {
        let alertPresenter = AlertPresenter(delegate: self)
        let actionYes = UIAlertAction(title: "Да", style: .default) { _ in
            self.presenter.logout()
        }
        let actionNo = UIAlertAction(title: "Нет", style: .default)
        alertPresenter.showLogoutAlert(title: "Пока, пока!",
                                       message: "Уверены, что хотите выйти?",
                                       actionYes: actionYes, actionNo: actionNo)
...
